# faceldp

./: AUTHORS  Android.mk  Application.mk  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am  frontalface.txt  frontalface_opencv.txt
examples/: Makefile.am  facelbp_gtk_demo.cc  facelbp_opencv_demo.cc  facelbp_test.cc
src/: Makefile.am  common.h  face_detect.cc  face_detect.h  face_object.h  facelbp_xml_converter.cc  group_rectangle.cc  group_rectangle.h  integral_image.cc  integral_image.h  lbp.cl  lbp.h  lbp_cl.cc  lbp_cl.h  lbp_detect.cc  lbp_detect.h  lbp_detect_sse2.cc  lbp_image.cl
