 MAINTAINERCLEANFILES = \
	$(srcdir)/INSTALL \
	$(srcdir)/aclocal.m4 \
	$(srcdir)/configure \
	$(srcdir)/config.guess \
	$(srcdir)/config.sub \
	$(srcdir)/depcomp \
	$(srcdir)/install-sh \
	$(srcdir)/ltmain.sh \
	$(srcdir)/m4/libtool.m4 \
	$(srcdir)/m4/ltoptions.m4 \
	$(srcdir)/m4/ltsugar.m4 \
	$(srcdir)/m4/ltversion.m4 \
	$(srcdir)/m4/lt~obsolete.m4 \
	$(srcdir)/missing \
	$(srcdir)/Makefile.in \
	$(srcdir)/src/Makefile.in \
	$(srcdir)/examples/Makefile.in \
	$(srcdir)/data/Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src examples data

